k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  labels:
    app: python
spec:
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: python
        image: ankur512512/httpservice:latest
        resources:
          limits:
            cpu: 500m
            memory: 64Mi
          requests:
            cpu: 200m
            memory: 128Mi
