k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: python
  ports:
    - port: 5000
      targetPort: 5000
